--- a/kubefiles/knService_quay.yml
+++ b/kubefiles/knService_quay.yml
@@ -1,7 +1,7 @@
 apiVersion: serving.knative.dev/v1alpha1
 kind: Service
 metadata:
-  name: serverlessdemo
+  name: quarked
 spec:
   runLatest:
     configuration:
