--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-quarkus.package.type=uber-jar
+quarkus.container-image.group=kevindubois
+quarkus.container-image.registry=quay.io
+quarkus.container-image.tag=latest
+quarkus.kubernetes.deployment-target=knative
+quarkus.knative.image-pull-policy=IfNotPresent
+quarkus.knative.readiness-probe.period=1s
