--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -1,4 +1,20 @@
-FROM registry.access.redhat.com/ubi9-minimal
+####
+# This Dockerfile is used in order to build a container that runs the Quarkus application in native (no JVM) mode.
+#
+# Before building the container image run:
+#
+# ./mvnw package -Pnative
+#
+# Then, build the image with:
+#
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/code-with-quarkus .
+#
+# Then run the container using:
+#
+# docker run -i --rm -p 8080:8080 quarkus/code-with-quarkus
+#
+###
+FROM registry.access.redhat.com/ubi8/ubi-minimal:8.6
 WORKDIR /work/
 RUN chown 1001 /work \
     && chmod "g+rwX" /work \
@@ -7,5 +23,5 @@ COPY --chown=1001:root target/*-runner /work/application
 
 EXPOSE 8080
 USER 1001
-# CMD [ "./quarked-1.0.0-runner", "-Xmx7m", "-Xmn7m", "-Xms7m" ]
-CMD [ "./quarked-1.0.0-runner", "-Dquarkus.http.host=0.0.0.0",  "-Xmx12m", "-Xmn12m", "-Xms12m", "-Dquarkus.http.io-threads=2", "-Dquarkus.http.worker-threads=2" ]
+
+CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
