--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 quarkus.container-image.group=kevindubois
 quarkus.container-image.registry=quay.io
-quarkus.container-image.tag=latest
+quarkus.container-image.tag=jvm
 quarkus.kubernetes.deployment-target=knative
+
 quarkus.knative.image-pull-policy=IfNotPresent
 quarkus.knative.readiness-probe.period=1s
+
+#quarkus.kubernetes.deployment-target=openshift
+#quarkus.kubernetes.deployment-target=kubernetes
+quarkus.openshift.route.expose=true
+quarkus.kubernetes.ingress.expose=true
+quarkus.openshift.route.tls.insecure-edge-termination-policy=Redirect
+quarkus.openshift.route.tls.termination=edge
+
